<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spnAn"
        android:layout_width="154dp"
        android:layout_height="58dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="62dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/spnDia" />

    <Spinner
        android:id="@+id/spnMes"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/txtApeM"
        app:layout_constraintStart_toStartOf="@+id/txtApeM"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/txtCurp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="109dp"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnCalcular" />

    <EditText
        android:id="@+id/txtNom"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="550dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnLimpiar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtApeP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txtApeM"
        app:layout_constraintEnd_toStartOf="@+id/txtApeM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtApeM" />

    <EditText
        android:id="@+id/txtApeM"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="149dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="147dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/spnMes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombre"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/apellido_paterno"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtApeP"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/apellido_materno"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtApeM"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spnDia"
        android:layout_width="155dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/spnMes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spnMes" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/dia"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spnDia"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/mes"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/spnMes" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="338dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/a_o"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spnDia" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="33dp"
        android:onClick="calcular"
        android:text="@string/calcular"
        app:layout_constraintBottom_toTopOf="@+id/txtCurp"
        app:layout_constraintEnd_toEndOf="@+id/spnAn" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:onClick="limpiar"
        android:text="@string/limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNom" />

</androidx.constraintlayout.widget.ConstraintLayout>